2011-08-30	Peter Dufault <dufault@hda.com>

	* libchip/network/smc91111.c: Modify to support the MPC5554 using new
	exceptions.  Fix where the networking status is being dumped to a
	single thousand-character line.  Add support for when the chip loaded
	it's MAC address from a serial chip at reset (the
	SMC91111_ENADDR_IS_SETUP option).  Call lan91cxx_start() every time
	the the device is initialized.  Without this change the chip can not
	be "upped" once it has been downed.
	* c/src/libchip/network/smc91111.h: Change the "#ifdef expression" to
	"#if expression".
	* c/src/libchip/network/smc91111exp.h: Add support for new exceptions.

2011-07-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550_p.h, libchip/serial/ns16550.c: Remove
	interrupt handler during last close.

2011-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/display/disp_hcms29xx.c, libchip/flash/am29lv160.c,
	libchip/i2c/i2c-2b-eeprom.c, libchip/i2c/i2c-ds1621.c,
	libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-fram-fm25l256.c,
	libchip/i2c/spi-memdrv.c, libchip/rtc/ds1375.c: Eliminate use of GNU
	old-style field designator extension as recommended by clang.

2011-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/i2c/spi-memdrv.h: Add missing semi-colon.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* aclocal/bspopts.m4: Added macros for cache options
	RTEMS_BSPOPTS_SET_DATA_CACHE_ENABLED,
	RTEMS_BSPOPTS_HELP_DATA_CACHE_ENABLED,
	RTEMS_BSPOPTS_SET_INSTRUCTION_CACHE_ENABLED, and
	RTEMS_BSPOPTS_HELP_INSTRUCTION_CACHE_ENABLED.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1729/cpukit
	* aclocal/check-smp.m4, aclocal/enable-smp.m4: New files.

2011-03-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4: Add pkgdatadir.
	* configure.ac: Remove dead code.

2011-03-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4, aclocal/version.m4:
	Rename RTEMS_API into _RTEMS_API.
