@@ -59,14 +59,14 @@
 #include "smc91111config.h"
 #include <libchip/smc91111.h>
 
-#ifdef _OLD_EXCEPTIONS
-#if defined(__m68k__)
-extern m68k_isr_entry set_vector( rtems_isr_entry, rtems_vector_number, int );
+#ifdef BSP_FEATURE_IRQ_EXTENSION
+  #include <rtems/irq-extension.h>
 #else
-extern rtems_isr_entry set_vector( rtems_isr_entry, rtems_vector_number, int );
-#endif
-#else
-#include <rtems/irq-extension.h>
+  #if defined(__m68k__)
+    extern m68k_isr_entry set_vector( rtems_isr_entry, rtems_vector_number, int );
+  #else
+    extern rtems_isr_entry set_vector( rtems_isr_entry, rtems_vector_number, int );
+  #endif
 #endif
 
 struct lan91cxx_priv_data smc91111;
@@ -1072,21 +1072,25 @@ int lan91cxx_hardware_init(struct lan91cxx_priv_data *cpd)
 	cpd->txbusy = cpd->within_send = 0;
 
 	/* install interrupt vector */
-#ifdef _OLD_EXCEPTIONS
+#ifdef BSP_FEATURE_IRQ_EXTENSION
+	{
+		rtems_status_code sc = RTEMS_SUCCESSFUL;
+
+		sc = rtems_interrupt_handler_install(
+			cpd->config.vector,
+			cpd->config.info,
+			cpd->config.options,
+			cpd->config.interrupt_wrapper,
+			cpd->config.arg
+		);
+		if (sc != RTEMS_SUCCESSFUL) {
+			printf("rtems_interrupt_handler_install returned %d.\n", sc);
+			return 0;
+		}
+	}
+#else
 	db_printf("Install lan91cxx irqvector at %d\n", cpd->config.vector);
 	set_vector(lan91cxx_interrupt_handler, cpd->config.vector, 1);
-#else
-    {
-        int r;
-        if ((r = rtems_interrupt_handler_install(cpd->config.vector,
-        cpd->config.info,
-        cpd->config.options,
-        cpd->config.interrupt_wrapper,
-        cpd->config.arg) )) {
-                printf("rtems_interrupt_handler_install returned %d.\n", r);
-                return 0;
-        }
-    }
 #endif
 
 	/* Reset chip */
